IMDB数据集上的BERT fine-tune练习

--- a/ML-Action/06-pytorch-tutorial.ipynb
+++ b/ML-Action/06-pytorch-tutorial.ipynb
@@ -1152,9 +1152,9 @@
    "source": [
     "### Softmax层\n",
     "\n",
-    "+ `nn.Softmax(dim)`\n",
+    "+ `nn.Softmax(dim)`, 一般用于将多分类问题下，Linear层的输出转换成 **概率**.\n",
     "\n",
-    "+ `nn.LogSofrmax(dim)`\n",
+    "+ `nn.LogSofrmax(dim)`，用于将多分类问题里 Linear 层的输出转换成 **对数概率**.\n",
     "\n",
     "`dim`参数指定计算的轴维度。"
    ]
@@ -1678,7 +1678,7 @@
     "对数似然误差(Negative Log Likelihood Loss, 缩写为**NLLL**)对应的类是 `nn.NLLLoss()`，通常用于多分类问题 .    \n",
     "\n",
     "它实例化的对象接受的参数为`(Input, Target)`：\n",
-    "+ `Input`的 `shape=(batch_size, C)`，$C$ 是类别的个数。其中每一行的值应当是经过 softmax 之后 取对数的结果——也就是所谓的 Log Likelihood.\n",
+    "+ `Input`的 `shape=(batch_size, C)`，$C$ 是类别的个数。其中每一行的值应当是 $log(softmax(x))$ 的结果——也就是所谓的 Log Likelihood.\n",
     "+ `Target`的 `shape=(batch_size)`\n",
     "\n",
     "这个类的构造函数里有一个 `reduction='mean'` 的参数，表示会将得到的结果进行reduce，方式是取均值。"
@@ -4306,9 +4306,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Tensorflow-1.15(Python3.6.12)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow1.15"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4320,7 +4320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.6"
   },
   "toc-autonumbering": true
  },
