--- a/ML-Action/11-Transformer.ipynb
+++ b/ML-Action/11-Transformer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "parliamentary-principal",
+   "id": "terminal-riding",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "theoretical-outside",
+   "id": "mature-affiliation",
    "metadata": {},
    "source": [
     "# Pytorch-Transformer\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "funky-marketplace",
+   "id": "mechanical-agenda",
    "metadata": {},
    "source": [
     "## MultiheadAttention Layer\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "connected-contrast",
+   "id": "permanent-vietnamese",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "detected-shuttle",
+   "id": "sunrise-springer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "geological-dairy",
+   "id": "civilian-dubai",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "israeli-estonia",
+   "id": "private-affair",
    "metadata": {},
    "source": [
     "## Encoder Layer\n",
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "hollywood-ethics",
+   "id": "variable-jerusalem",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "starting-convenience",
+   "id": "executed-intelligence",
    "metadata": {},
    "source": [
     "## Decoder Layer\n",
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "forced-rouge",
+   "id": "coated-teacher",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "straight-installation",
+   "id": "crucial-logistics",
    "metadata": {},
    "source": [
     "----------------------------\n",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moderate-giant",
+   "id": "respective-distance",
    "metadata": {},
    "source": [
     "----------------\n",
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "wanted-baghdad",
+   "id": "insured-place",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "lyric-structure",
+   "id": "packed-roommate",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "foster-partition",
+   "id": "nonprofit-sleeping",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "binary-civilization",
+   "id": "conscious-polls",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "governmental-aquarium",
+   "id": "recreational-beijing",
    "metadata": {},
    "source": [
     "-----------------\n",
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "japanese-yugoslavia",
+   "id": "dedicated-senator",
    "metadata": {},
    "source": [
     "### BertModel\n",
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "restricted-insert",
+   "id": "gentle-wages",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "square-disney",
+   "id": "tired-metadata",
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "passive-reproduction",
+   "id": "useful-vacuum",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "massive-intelligence",
+   "id": "resistant-locking",
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "falling-scoop",
+   "id": "anticipated-operations",
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "empirical-arrangement",
+   "id": "higher-program",
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "enclosed-south",
+   "id": "relevant-mother",
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "efficient-cabinet",
+   "id": "frank-consolidation",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "large-arkansas",
+   "id": "wrong-allergy",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "peripheral-fundamental",
+   "id": "isolated-order",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "russian-dairy",
+   "id": "baking-revolution",
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "surprising-acoustic",
+   "id": "protected-event",
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "measured-equipment",
+   "id": "individual-attitude",
    "metadata": {},
    "source": [
     "+ 也可以用 切片 的方式，直接从 `outputs` 中获取前两个的值"
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "municipal-commission",
+   "id": "smoking-recipient",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "certain-fields",
+   "id": "saving-device",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "bottom-things",
+   "id": "lined-judges",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "failing-classroom",
+   "id": "specific-cache",
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adequate-advantage",
+   "id": "swiss-trailer",
    "metadata": {},
    "source": [
     "### BertForPreTraining\n",
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "amazing-vancouver",
+   "id": "honey-homeless",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "mineral-shanghai",
+   "id": "latter-laptop",
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "associate-techno",
+   "id": "paperback-confidence",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "uniform-establishment",
+   "id": "killing-professional",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "liberal-challenge",
+   "id": "adjacent-stations",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1113,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "blocked-truck",
+   "id": "cultural-discovery",
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "guilty-compensation",
+   "id": "closing-jaguar",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stone-excerpt",
+   "id": "environmental-retreat",
    "metadata": {},
    "source": [
     "### BertForSequenceClassification\n",
@@ -1173,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "automotive-intelligence",
+   "id": "crucial-there",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1181,9 +1181,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Tensorflow-1.15(Python3.6.12)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow1.15"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1195,7 +1195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
