特征工程复习

--- a/ML-Action/00-Feature-engeneering.ipynb
+++ b/ML-Action/00-Feature-engeneering.ipynb
@@ -1147,16 +1147,16 @@
    "source": [
     "### 相关性过滤\n",
     "\n",
-    "通常希望选出与标签相关且有意义的特征，因为这样的特征能够为我们提供大量信息。如果特征与标签无关，那只会白白浪费我们的计算内存，可能还会给模型带来噪音。  \n",
+    "这部分又叫 **单变量过滤**，通常希望选出与标签相关且有意义的特征，因为这样的特征能够为我们提供大量信息。如果特征与标签无关，那只会白白浪费我们的计算内存，可能还会给模型带来噪音。  \n",
     "在sklearn当中，我们有三种常用的方法来评判特征与标签之间的相关性：\n",
-    "1. 卡方\n",
+    "1. 卡方 $\\chi^2$ 检验   \n",
     "卡方过滤是专门针对**离散型标签（即分类问题）**的相关性过滤。  \n",
     "卡方检验类`feature_selection.chi2`计算每个非负特征和标签之间的卡方统计量，并依照卡方统计量由高到低为特征排名。  \n",
     "\n",
     "\n",
-    "2. F检验  \n",
-    "又称ANOVA，方差齐性检验，是用来捕捉每个特征与标签之间的线性关系的过滤方法。  \n",
-    "它即可以做回归也可以做分类，因此包含 `feature_selection.f_classif`（F检验分类）和 `feature_selection.f_regression`（F检验回归）两个类，其中F检验分类用于标签是离散型变量的数据，而F检验回归用于标签是连续型变量的数据。\n",
+    "2. $F$ 检验  \n",
+    "又称ANOVA，方差齐性检验，是用来捕捉每个特征与标签之间 **线性关系** 的过滤方法。  \n",
+    "它即可以做回归也可以做分类，因此包含 `feature_selection.f_classif`（F检验分类）和 `feature_selection.f_regression`（F检验回归）两个类，其中F检验分类用于标签是离散型变量的数据，而F检验回归用于标签是连续型变量的数据。  \n",
     "需要注意的是，F检验在数据服从正态分布时效果会非常稳定，因此如果使用F检验过滤，通常会先将数据转换成服从正态分布的方式.\n",
     "\n",
     "3. 互信息  \n",
@@ -1167,7 +1167,7 @@
     "**互信息法不返回p值或F值类似的统计量，它返回“每个特征与目标之间的互信息量的估计”，这个估计量在[0,1]之间取值，为0则表示两个变量独立，为1则表示两个变量完全相关**.\n",
     "\n",
     "\n",
-    "上述三种检验方法都需要结合`feature_selection.SelectKBest`这个可以输入”评分标准“来选出前K个分数最高的特征的类，借此除去最可能独立于标签，与我们分类目的无关的特征.\n",
+    "上述三种检验方法都需要结合`feature_selection.SelectKBest`使用，该函数可以输入”评分标准“来选出前K个分数最高的特征的类，借此除去最可能独立于标签，与我们分类目的无关的特征.\n",
     "\n",
     "\n",
     "+ `feature_selection.SelectKBest(score_func=<function f_classif>, *, k=10)`——这是类  \n",
@@ -1182,7 +1182,7 @@
     "**下面这三个都是函数，不是类**.  \n",
     "\n",
     "+ 卡方值  \n",
-    "`feature_selection.chi2(X, y)` —— 计算X中各个**非负**特征和y的卡方值。  \n",
+    "`feature_selection.chi2(X, y)` —— 计算X中各个 **非负**特征 和 目标变量 y 的卡方值。  \n",
     "返回值如下：\n",
     "  + `chi`，各个特征的卡方值\n",
     "  + `pval`，每个特征卡方值对应的p值\n",
@@ -1204,7 +1204,10 @@
     "  + `n_neighbors`，int，用于指定计算互信息的neighbors\n",
     "  + `copy`，布尔值，默认为True. 表示是否在原数组上进行操作  \n",
     "  返回值\n",
-    "  + `mi`，各个特征的互信息"
+    "  + `mi`，各个特征的互信息\n",
+    "  \n",
+    "  \n",
+    "sklearn官方文档提供了一个Demo [Univariate Feature Selection](https://scikit-learn.org/stable/auto_examples/feature_selection/plot_feature_selection.html#sphx-glr-auto-examples-feature-selection-plot-feature-selection-py)."
    ]
   },
   {
@@ -1397,8 +1400,11 @@
     "嵌入法是一种让算法自己决定使用哪些特征的方法，即特征选择和算法训练同时进行。  \n",
     "在使用嵌入法时，**先使用某些机器学习的算法和模型进行训练，得到各个特征的权值系数，根据权值系数从大到小选择特征**.\n",
     "\n",
-    "+ `feature_selection.SelectFromModel(estimator, *, threshold=None, prefit=False, norm_order=1, max_features=None, importance_getter='auto')`\n",
-    "  + `estimator`，使用的模型评估器，这个估计器必须要有`.feature_importance_`或者`.coef_`属性，用于评估特征.**只要是带`feature_importances_`或者`coef_`属性，或带有l1和l2惩罚项的模型都可以使用**.\n",
+    "`feature_selection.SelectFromModel(estimator, *, threshold=None, prefit=False, norm_order=1, max_features=None, importance_getter='auto')`\n",
+    "\n",
+    "+ 参数\n",
+    "  + `estimator`，使用的模型评估器，这个估计器必须要有`.feature_importance_`或者`.coef_`属性，用于评估特征.   \n",
+    "    **只要是带`feature_importances_`或者`coef_`属性，或带有l1和l2惩罚项的模型都可以使用**.\n",
     "  + `threshold`，特征重要性的阈值，重要性低于这个阈值的特征都将被删除。  \n",
     "  可以填 string 或者 float：\n",
     "    + string时，可以是`mean`，`median`，表示阈值为所有特征重要性的均值或者中位数；\n",
@@ -1408,11 +1414,14 @@
     "  + `norm_order`，尚不清楚如何使用\n",
     "  + `max_features`，表示保留特征的最大个数.\n",
     "  + `importance_getter`\n",
-    "  \n",
+    "\n",
+    "\n",
     "+ `SelectFromModel`实例对象的属性\n",
     "  + `estimator_`，基础的估计器\n",
     "  + `threshhold_`，使用的特征重要性阈值\n",
-    "  \n",
+    "\n",
+    "\n",
+    "\n",
     "+ `SelectFromModel`实例对象的方法\n",
     "  + `.fit(X,y)` 、`.transform(X,y)`或者 `.fit_transform(X,y)` 方法\n",
     "  + `get_support(indices=False)`，获取筛选出来的特征的掩码或者index（indices=True）."
@@ -1589,7 +1598,7 @@
     "3. 在修剪过特征之后的特征集上再次进行1、2中的评估\n",
     "4. 直到减小至设置的特征数量.\n",
     "\n",
-    "包装法和嵌入法的区别在于：嵌入法一次训练即可，包装法要不断的减少特征子集并进行多次训练，所以包装法的计算成本很大.\n",
+    "包装法和嵌入法的区别在于：**嵌入法一次训练即可，包装法要不断的减少特征子集并进行多次训练，所以包装法的计算成本很大**.\n",
     "\n",
     "sklearn中的包装法主要是RFE方法——Recursive Feature Elimination.\n",
     "+ `feature_selection.RFE(estimator, *, n_features_to_select=None, step=1, verbose=0, importance_getter='auto')`\n",
@@ -4531,9 +4540,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BaseEnv(3.7.6)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "base-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
