--- a/ML-Action/02-xgboost.ipynb
+++ b/ML-Action/02-xgboost.ipynb
@@ -10,12 +10,12 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.18.1\n",
-      "pandas:      1.0.1\n",
-      "matplotlib:  3.1.3\n",
-      "sklearn:     0.22.1\n",
-      "seaborn:     0.10.0\n",
-      "plotly:      4.14.1\n"
+      "numpy:       1.19.2\n",
+      "pandas:      1.2.2\n",
+      "matplotlib:  3.3.4\n",
+      "sklearn:     0.23.2\n",
+      "seaborn:     0.11.1\n",
+      "plotly:      4.14.3\n"
      ]
     }
    ],
@@ -323,60 +323,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "XGBoost的两种接口"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# xgb接口"
+    "# xgb接口\n",
+    "\n",
+    "注意xgb的版本，0.90版本的XGB是没有`'objective': 'reg:squaredlogerror'`这个参数的"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xgboost as xgb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dtrain = xgb.DMatrix(Xtrain, ytrain)\n",
-    "dtest = xgb.DMatrix(Xtest,ytest)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.3.1'"
+       "'1.3.3'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import xgboost as xgb\n",
     "xgb.__version__"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "注意上面xgb的版本，0.90版本的XGB是没有`'objective': 'reg:squaredlogerror'`这个参数的"
+    "dtrain = xgb.DMatrix(Xtrain, ytrain)\n",
+    "dtest = xgb.DMatrix(Xtest,ytest)"
    ]
   },
   {
@@ -4226,9 +4206,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BaseEnv(3.7.6)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "base-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
