plotly练习+孤立森林练习

--- a/DataVisualization/Python-Matplotlib.ipynb
+++ b/DataVisualization/Python-Matplotlib.ipynb
@@ -2077,9 +2077,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BaseEnv(3.7.6)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "base-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2092,7 +2092,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
-  }
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
