复习python绘图操作

--- a/DataVisualization/Python-Matplotlib.ipynb
+++ b/DataVisualization/Python-Matplotlib.ipynb
@@ -331,7 +331,7 @@
     "2. 然后要向figure中添加一个`Axes`；\n",
     "3. 在添加的 `Axes` 上调用`.plot()`方法绘图.\n",
     "\n",
-    "> 有个奇怪的地方，就是下面这些绘图代码，不能分散在不同的cell里，否则就看不到绘制的图形。"
+    "> 有个奇怪的地方，就是下面这些绘图代码，不能分散在 jupyter notebook 的不同的cell里，否则就看不到绘制的图形。"
    ]
   },
   {
@@ -477,14 +477,10 @@
     "\n",
     "In [17]: type(new_axex)\n",
     "Out[17]: matplotlib.axes._axes.Axes\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "+ 总结，**使用面向对象风格创建图形常用的几个函数如下**\n",
+    "```\n",
+    "\n",
+    "\n",
+    "总结，**使用面向对象风格创建图形常用的几个函数如下**\n",
     "  + `ax = plt.subplot()`\n",
     "  + `ax = fig.add_subplot()` —— 推荐\n",
     "  + `fig, axes = plt.subplots()` —— 最为推荐"
@@ -571,13 +567,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Matplotlib基本绘图"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Matplotlib基本绘图\n",
+    "\n",
     "一幅完整的图形必须包括如下部分\n",
     "1. 图形本身\n",
     "2. 图标题\n",
@@ -590,7 +581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ 数据集"
+    "## iris数据集"
    ]
   },
   {
@@ -710,7 +701,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### plot 方法\n",
+    "\n",
     "使用 [**matplotlib.axes.Axes.plot**](https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.plot.html#matplotlib.axes.Axes.plot) 来绘制点图和线图.  \n",
+    "\n",
     "这里有必要看一下这个函数的参数形式和函数签名：  \n",
     "`Axes.plot(self, *args, scalex=True, scaley=True, data=None, **kwargs)` .  \n",
     "```python\n",
@@ -867,7 +861,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ [**matplotlib.axes.Axes.scatter()**](https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.scatter.html#matplotlib.axes.Axes.scatter)  \n",
+    "### scatter 方法\n",
+    "\n",
+    "[**matplotlib.axes.Axes.scatter()**](https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.scatter.html#matplotlib.axes.Axes.scatter)  \n",
     "这个也是绘制散点图的函数，它比`plot()`方法更加强大，**可以绘制点的大小和颜色可变化**的散点图。  \n",
     "参数有：\n",
     "  + `s`，映射点的大小属性，float or **array-like, shape (n, )**\n",
@@ -943,11 +939,13 @@
     "用于展示 **一维`离散`变量** 的频数分布，横坐标通常是分类变量， 纵坐标是该取值下的频数。\n",
     "\n",
     "两个函数：\n",
-    "+ `Axes.bar(self, x, height, width=0.8, bottom=None, *, align='center', data=None, **kwargs)` —— 竖直条形图\n",
-    "  + `x`，条形图的横坐标，loat or array-like， 可以是字符串组成的list;\n",
+    "+ `Axes.bar(self, x, height, width=0.8, bottom=None, *, align='center', data=None, **kwargs)` —— **竖直**条形图\n",
+    "  + `x`，条形图的横坐标，float or array-like， 可以是字符串组成的list;\n",
     "  + `height`，条形图的高度;\n",
     "  + `bottom`，用于指定每个条形图底部的base。\n",
-    "+ `Axes.barh(self, y, width, height=0.8, left=None, *, align='center', **kwargs)` —— 水平条形图\n",
+    "\n",
+    "\n",
+    "+ `Axes.barh(self, y, width, height=0.8, left=None, *, align='center', **kwargs)` —— **水平**条形图\n",
     "  + `y`，条形图的纵坐标\n",
     "  + `width`，条形图的“高度”，**相当于竖直条形图中的`height`**（同样的，这里的height相当于竖直条形图里的width）\n",
     "  + `left`，相当于竖直条形图中的`bottom`\n",
