数据可视化练习

--- a/DataVisualization/Python-Seaborn.ipynb
+++ b/DataVisualization/Python-Seaborn.ipynb
@@ -25,7 +25,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ 控制图形大小"
+    "## 控制图形大小\n",
+    "\n",
+    "参考官方文档 [Specifying figure sizes](https://seaborn.pydata.org/tutorial/function_overview.html#specifying-figure-sizes).\n",
+    "\n",
+    "+ 对于`Axes-level`的绘图函数，可以由matplotlib来操控\n",
+    "  + `matplotlib.pyplot.subplots()`的`figsize`参数\n",
+    "  + `matplotlib.Figure.set_size_inches()`方法\n",
+    "  \n",
+    "\n",
+    "\n",
+    "+ 对于`Figure-level`的绘图函数，情况有所不同\n",
+    "  + 返回的`FaceGrid`对象里，图形大小的控制参数为`height, aspect`，而不是matplotlib的`width, height`\n",
+    "  + 两者的关系为：`width = height * aspect`\n",
+    "  + 最重要的是，`FaceGrid`里，控制的是每个子图的大小，而不是直接控制整幅图形的大小"
    ]
   },
   {
@@ -68,13 +81,6 @@
     "注意事项：  \n",
     "1. 这里不能使用 `plt.subplot()`，因为它只返回一个`Axes`对象，不返回`Figure`对象，不能设置`figsize`\n",
     "2. **不能使用 `sns.relplot`，它是 figure-level 的绘图，不能使用ax参数**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "------------"
    ]
   },
   {
@@ -166,13 +172,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "----------"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "---------------"
    ]
   },
@@ -180,21 +179,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Seaborn基础"
+    "# Seaborn基础\n",
+    "\n",
+    "官方文档 [seaborn: statistical data visualization](https://seaborn.pydata.org/)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Figure-level和Axes-level绘图函数\n",
+    "## Figure-Level 和 Axes-Level 绘图函数\n",
     "\n",
-    "seaborn 的绘图函数分为两个层次，**Figure-level** 和 **Axes-level**：\n",
-    "+ Figure-level的函数有`relplot`,`catplot`等，它们返回的是`FacetGrid`对象——它是对matplotlib里`Figure`的封装。  \n",
-    "这类函数都有一个`kind`参数，用来和 axes-level 的绘图函数进行绑定；\n",
-    "+ Axes-level，这些函数返回的是matplotlib的 `Axes` 对象。\n",
+    "seaborn 的绘图函数分为两个层次，**Figure-level** 和 **Axes-level**，参考官方文档 [Overview of seaborn plotting functions](https://seaborn.pydata.org/tutorial/function_overview.html)：\n",
+    "+ `Figure-Level`\n",
+    "  + 有三个：`relplot`——绘制变量关系；`displot`——绘制变量分布；`catplot`——绘制分类变量。\n",
+    "  + 它们返回的是`FacetGrid`对象——它是对`matplotlib`里`Figure`的封装。  \n",
+    "  + 这类函数都有一个`kind`参数，用来调用 Axes-Level 对应类型的绘图函数。\n",
+    "  \n",
     "\n",
-    "常用的figure-level和axes-level绘图函数如下.  \n",
+    "\n",
+    "+ `Axes-Level`\n",
+    "  + 这些函数操作的是`matplotlib.pyplot.Axes` 对象，返回的也是该对象。\n",
+    "  + 此类函数不会修改`Axes`之外的内容，可以和matplotlib的其他图形组合在一起。\n",
+    "  + 此类函数默认下会调用`matplotlib.pyplot.gca()`方法获取当前活动的图形句柄，然后在上面绘图，但是也可以**接受一个`ax=`参数，用于在指定的`Axes`上绘图**。\n",
+    "\n",
+    "\n",
+    "常用的Figure-Level和Axes-Level绘图函数如下.  \n",
     "注意，**这是 0.11.0(2020 September) 版的**，主要的变化是：\n",
     "1. 原来可视化分布的 `distplot`函数 --> `displot`（少了t）\n",
     "2. 新增了`histplot`,`ecdfplot`\n",
@@ -206,20 +216,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## FaceGrid\n",
+    "## FacetGrid\n",
+    "\n",
+    "官方文档 [seaborn.FacetGrid](https://seaborn.pydata.org/generated/seaborn.FacetGrid.html#seaborn.FacetGrid).\n",
     "\n",
     "在seaborn中，Axes-level的绘图函数返回的都是`matplotlib.axes.Axes`对象，所以直接使用matplotlib里的操作方式对这些图形对象进行设置就行了。  \n",
-    "而Figure-level的绘图函数返回的是一个 [**`seabornFaceGrid`**](https://seaborn.pydata.org/generated/seaborn.FacetGrid.html#seaborn.FacetGrid) 对象，熟练的使用seaborn需要对这个对象做一些说明。\n",
+    "而Figure-level的绘图函数返回的是一个 `seabornFacetGrid` 对象，熟练的使用seaborn需要对这个对象做一些说明。\n",
     "\n",
     "\n",
     "`class seaborn.FacetGrid(data, *, row=None, col=None, hue=None, col_wrap=None, sharex=True, sharey=True, height=3, aspect=1, palette=None, row_order=None, col_order=None, hue_order=None, hue_kws=None, dropna=False, legend_out=True, despine=True, margin_titles=False, xlim=None, ylim=None, subplot_kws=None, gridspec_kws=None, size=None)` . \n",
     "\n",
     "`FacetGrid`类工作原理如下：\n",
     "1. 首先使用数据集dataset（long-format）和要使用的变量来初始化一个对象。  \n",
-    "传入的变量被赋值给`row`, `col`, `hue` 这三个参数。  \n",
-    "`row`和`col`的取值会决定绘图的Figure的子图布局，比如row的取值为2，col取值为3，那就会绘制一个$2\\times3$的布局子图。而`hue`会在每个子图里对数据进行分组。  \n",
-    "如果没有传入这些变量，默认不分割子图——这就是\"FaceGrid\"代表的意思。\n",
-    "2. **每个子图对应于数据的子集**，在这些子集上，调用`FaceGrid.map()`或者`FaceGrid.map_dataframe()`方法，用同样的绘图函数进行绘图.\n",
+    "   + 传入的变量被赋值给`row`, `col`, `hue` 这三个参数。  \n",
+    "   + `row`和`col`的取值会决定绘图的Figure的子图布局，比如row=2，col=3，那就会绘制一个 $2\\times3$ 的布局子图。\n",
+    "   + 而`hue`会在每个子图里对数据进行分组。  \n",
+    "   + 如果没有传入这些变量，默认不分割子图——这就是\"FaceGrid\"代表的意思。\n",
+    "2. **每个子图对应于数据的一个子集**，在这些子集上，调用`FaceGrid.map()`或者`FaceGrid.map_dataframe()`方法，用同样的绘图函数进行绘图.\n",
     "3. 对图形进行细微调整.\n",
     "\n",
     "\n",
@@ -326,7 +339,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 数据集"
+    "# 数据格式\n",
+    "\n",
+    "参考官方文档 [Data structures accepted by seaborn](https://seaborn.pydata.org/tutorial/data_structure.html)."
    ]
   },
   {
@@ -2309,7 +2324,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2323,7 +2338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.10"
   },
   "toc-autonumbering": true,
   "toc-showmarkdowntxt": false
