数据可视化练习

--- a/DataVisualization/Python-Matplotlib.ipynb
+++ b/DataVisualization/Python-Matplotlib.ipynb
@@ -36,9 +36,16 @@
    "metadata": {},
    "source": [
     "## Matplotlib的一些有用资源\n",
+    "\n",
+    "+ **[Matplotlib->Tutorials](https://matplotlib.org/stable/tutorials/index.html)**  \n",
+    "  这个是matplotlib官方教程文档，十分详尽。\n",
+    "\n",
     "+ [Matplotlib->Tutorials->Usage guide](https://matplotlib.org/tutorials/introductory/usage.html)  \n",
     "  这个是matplotlib官方的文档，这一部分介绍了matplotlib中的一些基本框架和概念，包括：\n",
     "  Figure,Axes,Axis,backends,interactive modesl等等。\n",
+    "\n",
+    "+ **[Matplotlib API Overview](https://matplotlib.org/api/index.html)**   \n",
+    "  这是Matplotlib包含的所有子模块文档。\n",
     "\n",
     "+ [Anatomy of MatplotlibAnatomy of Matplotlib->Overview of Matplotlib](https://github.com/matplotlib/AnatomyOfMatplotlib)  \n",
     "  这是github上的一个教程文档，以jupyter格式提供，这个对于绘图方式解释的也很清楚。\n",
@@ -47,10 +54,7 @@
     "  这个对于基本概念也有解释，还不错。\n",
     "\n",
     "+ [PythonDataScienceHandlebook->Chapter 4.8](https://github.com/jakevdp/PythonDataScienceHandbook/tree/master/notebooks)  \n",
-    "  这个是2017年新出的书，在github上提供jupyter版，感觉这本书写的很好。\n",
-    "  \n",
-    "+ **[Matplotlib API Overview -> Modules](https://matplotlib.org/api/index.html#modules)**   \n",
-    "  这是Matplotlib包含的所有子模块文档。"
+    "  这个是2017年新出的书，在github上提供jupyter版，感觉这本书写的很好。\n"
    ]
   },
   {
@@ -211,14 +215,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 图形显示"
+    "## 交互式图形显示\n",
+    "\n",
+    "官方文档 [Interactive Figures](https://matplotlib.org/stable/users/interactive.html)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "matplotlib 使用 **interactive backend** 绘图时，如果要显示图形，会弹出一个单独的图形窗口。  \n",
+    "matplotlib 使用 **Interactive backend** 绘图时，如果要显示图形，会弹出一个单独的图形窗口。  \n",
     "**但什么时候弹出窗口、是否显示图形则取决于绘图函数的调用方式以及是否处于interactive状态** 。  \n",
     "\n",
     "以在 IPython Shell 中绘图为例：\n",
@@ -583,7 +589,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## iris数据集"
+    "## Iris数据集"
    ]
   },
   {
