泰坦尼克数据可视化练习

--- a/DataVisualization/Python-Seaborn.ipynb
+++ b/DataVisualization/Python-Seaborn.ipynb
@@ -87,6 +87,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 绘图风格\n",
+    "\n",
+    "官方文档 [Seaborn figure styles](https://seaborn.pydata.org/tutorial/aesthetics.html#seaborn-figure-styles).\n",
+    "\n",
+    "一共有5种风格可以使用：\n",
+    "+ darkgrid，默认风格\n",
+    "+ whitegrid\n",
+    "+ dark\n",
+    "+ white\n",
+    "+ ticks\n",
+    "\n",
+    "可以通过如下命令设置绘图风格：\n",
+    "```python\n",
+    "sns.set_stype(\"whitegrid\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 其他"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "+ 设置标题title  \n",
     "注意：**seaborn中对于中文标题不支持**\n",
     "\n",
@@ -2776,7 +2804,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BaseEnv(Python3.8.10)",
+   "display_name": "base",
    "language": "python",
    "name": "base"
   },
@@ -2790,7 +2818,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   },
   "toc-autonumbering": true,
   "toc-showmarkdowntxt": false
