--- a/DataVisualization/Python-Matplotlib.ipynb
+++ b/DataVisualization/Python-Matplotlib.ipynb
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -686,12 +686,13 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "iris = sns.load_dataset('iris')\n",
     "print(\"iris.shape: \", iris.shape)\n",
@@ -2135,7 +2136,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2149,7 +2150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "toc-autonumbering": true
  },
