--- a/DataVisualization/Python-Seaborn.ipynb
+++ b/DataVisualization/Python-Seaborn.ipynb
@@ -1437,7 +1437,10 @@
     "\n",
     "+ `swarmplot([x, y, hue, data, order, …])`  \n",
     "  + Draw a categorical scatterplot with **non-overlapping** points，(`kind=swarm`) .     \n",
-    "  + 采用特殊的算法分散点，**不适用于大数据集**。"
+    "  + 采用特殊的算法分散点，**不适用于大数据集**，数据规模太大的话，会有一些点无法放置在图中。\n",
+    "  \n",
+    "\n",
+    "> 个人感觉，这里的**分类散点图的不如下面的箱线图和小提琴图好用**。"
    ]
   },
   {
@@ -2909,7 +2912,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BaseEnv(Python3.8.10)",
+   "display_name": "base",
    "language": "python",
    "name": "base"
   },
@@ -2923,7 +2926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   },
   "toc-autonumbering": true,
   "toc-showmarkdowntxt": false
