--- a/DataVisualization/Python-Seaborn.ipynb
+++ b/DataVisualization/Python-Seaborn.ipynb
@@ -2912,7 +2912,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "BaseEnv(Python3.8.10)",
    "language": "python",
    "name": "base"
   },
@@ -2926,7 +2926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "toc-autonumbering": true,
   "toc-showmarkdowntxt": false
