--- a/Kaggle/Titanic-#1/titanic.ipynb
+++ b/Kaggle/Titanic-#1/titanic.ipynb
@@ -4739,7 +4739,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "BaseEnv(Python3.8.10)",
    "language": "python",
    "name": "base"
   },
@@ -4753,7 +4753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "pycharm": {
    "stem_cell": {
